Fixes #6357: File directory (#6377)
* Fixes #6357: File directory

Bug was introduced in https://github.com/JabRef/jabref/commit/1b03f039aa4abf0812a3a8ae0ba248c08fdb39a3.

* Fix tests

* Replace Paths.get

* Fix code style